--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ repositories {
     mavenCentral()
 }
 
+def allureVersion = "2.13.8",
+    selenideVersion = "5.20.1",
+    junitVersion = "5.7.1"
+
 allure {
     version = "2.13.8"
     autoconfigure = true
@@ -18,10 +22,19 @@ allure {
 }
 
 dependencies {
-    testImplementation "org.aspectj:aspectjweaver:1.9.6"
+    testImplementation(
+            "org.aspectj:aspectjweaver:1.9.6",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "com.codeborne:selenide:$selenideVersion",
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+}
 
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 test {
